wip: Fix formatting and layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
     justify-content: center;
     margin-left: 5%;
     margin-right: 5%;
+    margin-bottom: 3%;
     color: #221111;
 }
 
